update types of ports

--- a/config/crd/bases/evpn-api.domain-x.com_evpn4ovns.yaml
+++ b/config/crd/bases/evpn-api.domain-x.com_evpn4ovns.yaml
@@ -63,7 +63,15 @@ spec:
                           properties:
                             name:
                               type: string
+                            nodePort:
+                              format: int32
+                              type: integer
                             port:
+                              format: int32
+                              type: integer
+                            protocol:
+                              type: string
+                            targetPort:
                               format: int32
                               type: integer
                           type: object
@@ -102,7 +110,15 @@ spec:
                           properties:
                             name:
                               type: string
+                            nodePort:
+                              format: int32
+                              type: integer
                             port:
+                              format: int32
+                              type: integer
+                            protocol:
+                              type: string
+                            targetPort:
                               format: int32
                               type: integer
                           type: object
@@ -125,7 +141,15 @@ spec:
                           properties:
                             name:
                               type: string
+                            nodePort:
+                              format: int32
+                              type: integer
                             port:
+                              format: int32
+                              type: integer
+                            protocol:
+                              type: string
+                            targetPort:
                               format: int32
                               type: integer
                           type: object
